kubernetes/apps/network/cloudflare-dns/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflare-dns
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudflare-dns
      app.kubernetes.io/name: external-dns
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 7979
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflare-dns-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudflare-dns
      app.kubernetes.io/name: external-dns
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: api.cloudflare.com
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: api.cloudflare.com
    - toFQDNs:
        - matchName: api.cloudflare.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 104.19.192.29/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 104.19.192.177/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 104.19.192.175/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 104.19.192.174/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 104.19.192.176/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 104.19.193.29/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
